test_translator/tests/data/checkpoint_1/errors/16_undefined_function/solution.py
# Solution does NOT have 'target' - import will fail
def something_else(x):
    return x
